--- a/settings.gradle
+++ b/settings.gradle
@@ -3,7 +3,11 @@ rootProject.name = 'spring-batch'
 include 'spring-batch-core'
 include 'spring-batch-core-tests'
 include 'spring-batch-infrastructure'
+include 'spring-batch-infrastructure-neo4j4'
 include 'spring-batch-infrastructure-tests'
 include 'spring-batch-test'
 include 'spring-batch-integration'
 include 'spring-batch-samples'
+
+include "buildSrc"
+rootProject.children.find{ it.name == "buildSrc" }.name = "spring-build-src"
