--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,7 @@ buildscript {
 	dependencies {
 		classpath 'org.springframework.build.gradle:docbook-reference-plugin:0.2.8'
 		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.5'
-		classpath 'io.spring.gradle:spring-io-plugin:0.0.4.RELEASE'
+		classpath 'io.spring.gradle:spring-io-plugin:0.0.5.RELEASE'
 	}
 }
 
@@ -219,10 +219,12 @@ configure(mainProjects) {
 			maven { url "https://repo.spring.io/libs-snapshot" }
 		}
 
-		dependencyManagement {
-			springIoTestRuntime {
-				imports {
-					mavenBom "io.spring.platform:platform-bom:${platformVersion}"
+		dependencies {
+			dependencyManagement {
+				springIoTestRuntime {
+					imports {
+						mavenBom "io.spring.platform:platform-bom:${platformVersion}"
+					}
 				}
 			}
 		}
