--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
 		classpath 'io.spring.gradle:docbook-reference-plugin:0.3.1'
 		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
 		classpath 'io.spring.gradle:spring-io-plugin:0.0.5.RELEASE'
+		classpath "io.spring.gradle:dependency-management-plugin:0.5.1.RELEASE"
 	}
 }
 
@@ -22,7 +23,7 @@ ext {
 	linkScmConnection    = 'git://github.com/spring-projects/spring-batch.git'
 	linkScmDevConnection = 'git@github.com:spring-projects/spring-batch.git'
 
-	mainProjects = subprojects.findAll { !it.name.endsWith('tests') && !it.name.endsWith('samples') }
+	mainProjects = subprojects.findAll { !it.name.endsWith('tests') && !it.name.endsWith('samples') && it.name.startsWith('spring-batch-')}
 }
 
 allprojects {
@@ -54,7 +55,7 @@ allprojects {
 		springIntegrationVersion = '4.0.1.RELEASE'
 		springLdapVersion = '2.0.2.RELEASE'
 
-		activemqVersion = '5.9.1'
+		activemqVersion = '5.13.2'
 		aspectjVersion = '1.8.0'
 		castorVersion = '1.3.2'
 		commonsCollectionsVersion = '3.2.1'
@@ -218,12 +219,10 @@ configure(mainProjects) {
 			maven { url "https://repo.spring.io/libs-snapshot" }
 		}
 
-		dependencies {
-			dependencyManagement {
-				springIoTestRuntime {
-					imports {
-						mavenBom "io.spring.platform:platform-bom:${platformVersion}"
-					}
+		dependencyManagement {
+			springIoTestRuntime {
+				imports {
+					mavenBom "io.spring.platform:platform-bom:${platformVersion}"
 				}
 			}
 		}
