--- a/build.gradle
+++ b/build.gradle
@@ -42,57 +42,60 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '4.1.9.RELEASE'
+		springVersionDefault = '5.0.0.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
-		springRetryVersion = '1.1.2.RELEASE'
-		springAmqpVersion = '1.4.6.RELEASE'
-		springDataCommonsVersion = '1.9.4.RELEASE'
-		springDataGemfireVersion = '1.5.4.RELEASE'
-		springDataJpaVersion = '1.7.4.RELEASE'
-		springDataMongodbVersion = '1.6.4.RELEASE'
-		springDataNeo4jVersion = '3.2.4.RELEASE'
-		springDataNeo4j4Version = '4.1.2.RELEASE'
-		springIntegrationVersion = '4.1.8.RELEASE'
+		springRetryVersion = '1.1.3.RELEASE'
+		springAmqpVersion = '1.5.6.RELEASE'
+		springDataCommonsVersion = '1.11.5.RELEASE'
+		springDataGemfireVersion = '1.7.5.RELEASE'
+		springDataJpaVersion = '1.9.5.RELEASE'
+		springDataMongodbVersion = '1.8.5.RELEASE'
+		springDataNeo4jVersion = '3.4.5.RELEASE'
+		springDataNeo4j4Version = '4.1.3.RELEASE' //?
+		springIntegrationVersion = '4.2.9.RELEASE'
 		springLdapVersion = '2.0.4.RELEASE'
 
 		activemqVersion = '5.13.2'
-		aspectjVersion = '1.8.8'
+		aspectjVersion = '1.8.9'
 		castorVersion = '1.3.3'
 		commonsCollectionsVersion = '3.2.2'
 		commonsDdbcpVersion = '1.4'
 		commonsIoVersion = '2.4'
 		commonsLangVersion = '2.6'
-		derbyVersion = '10.10.2.0'
-		groovyVersion = '2.4.4'
+		commonsPoolVersion = '1.6'
+		derbyVersion = '10.12.1.1'
+		groovyVersion = '2.4.7'
 		hamcrestVersion = '1.3'
-		h2databaseVersion = '1.4.190'
-		hibernateVersion = '4.3.11.Final'
-		hibernateValidatorVersion = '5.1.3.Final'
+		h2databaseVersion = '1.4.192'
+		hibernateVersion = '5.2.2.Final'
+		hibernateValidatorVersion = '5.3.0.CR1'
 		hsqldbVersion = '2.3.3'
 		ibatisVersion = '2.3.4.726'
 		jacksonVersion = '1.9.13'
-		jackson2Version = "2.4.6"
-		javaMailVersion = '1.5.5'
+		jackson2Version = "2.4.6" //?
+		javaMailVersion = '1.5.6'
 		javaxBatchApiVersion = '1.0'
 		javaxInjectVersion = '1'
+		javaxTransactionVersion = '1.2'
 		jbatchTckSpi = '1.0'
 		jettisonVersion = '1.2'
-		jtdsVersion = '1.3.1'
-		junitVersion = '4.11'
+		jmsVersion = '1.1-rev-1'
+		jtdsVersion = '1.3.1' //?
+		junitVersion = '4.12'
 		log4jVersion = '1.2.17'
-		mysqlVersion = '5.1.38'
+		mysqlVersion = '5.1.39'
 		mockitoVersion = '1.10.19'
-		postgresqlVersion = '9.4.1209.jre6'
-		quartzVersion = '2.2.2'
-		servletApiVersion = '3.0.1'
+		postgresqlVersion = '9.4.1211.jre7'
+		quartzVersion = '2.2.3'
+		servletApiVersion = '3.1.0'
 		slf4jVersion = '1.7.21'
-		sqlfireclientVersion = '1.0.3'
-		sqliteVersion = '3.8.11.2'
+		sqlfireclientVersion = '1.0.3' //?
+		sqliteVersion = '3.8.11.2' //?
 		woodstoxVersion = '4.2.1'
-		xercesVersion = '2.11.0'
+		xercesVersion = '2.11.0' //?
 		xmlunitVersion = '1.5'
 		xstreamVersion = '1.4.9'
-		jrubyVersion = '1.7.23'
+		jrubyVersion = '1.7.26'
 		beanshellVersion = '2.0b5'
 	}
 }
@@ -107,18 +110,18 @@ configure(subprojects - project(":spring-build-src")) { subproject ->
 	apply plugin: 'merge'
 
 	jacoco {
-		toolVersion = "0.7.0.201403182114"
+		toolVersion = "0.7.6.201602180812"
 	}
 
     compileJava {
-        sourceCompatibility=1.6
-        targetCompatibility=1.6
+        sourceCompatibility=1.8
+        targetCompatibility=1.8
         options.encoding='UTF-8'
     }
 
     compileTestJava {
-        sourceCompatibility=1.7
-        targetCompatibility=1.7
+        sourceCompatibility=1.8
+        targetCompatibility=1.8
         options.encoding='UTF-8'
     }
 
@@ -160,9 +163,9 @@ configure(subprojects - project(":spring-build-src")) { subproject ->
 			destinationFile = file("$buildDir/jacoco.exec")
 		}
 
-//		testLogging {
-//			showStandardStreams = true
-//		}
+		testLogging {
+			showStandardStreams = true
+		}
 	}
 
 	task sourcesJar(type: Jar) {
@@ -213,6 +216,10 @@ configure(subprojects - project(":spring-build-src")) { subproject ->
 		archives sourcesJar
 		archives javadocJar
 	}
+}
+
+subprojects {
+	task allDeps(type: DependencyReportTask) {}
 }
 
 configure(mainProjects) {
@@ -319,7 +326,7 @@ project('spring-batch-infrastructure') {
 
 		testRuntime "org.beanshell:bsh:$beanshellVersion"
 
-		optional "javax.jms:jms-api:1.1-rev-1"
+		optional "javax.jms:jms-api:$jmsVersion"
 		optional "org.slf4j:slf4j-log4j12:$slf4jVersion"
 		optional "org.codehaus.jackson:jackson-mapper-asl:$jacksonVersion"
 		compile("org.hibernate:hibernate-core:$hibernateVersion") { dep ->
@@ -331,7 +338,7 @@ project('spring-batch-infrastructure') {
 			exclude group: 'org.jboss.spec.javax.transaction', module: 'jboss-transaction-api_1.1_spec'
 		}
 		optional "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
-		optional "javax.transaction:javax.transaction-api:1.2"
+		optional "javax.transaction:javax.transaction-api:$javaxTransactionVersion"
 		optional "org.apache.ibatis:ibatis-sqlmap:$ibatisVersion"
 		optional "javax.mail:javax.mail-api:$javaMailVersion"
 		optional "javax.batch:javax.batch-api:$javaxBatchApiVersion"
@@ -350,14 +357,19 @@ project('spring-batch-infrastructure') {
 		optional "org.springframework:spring-tx:$springVersion"
 		optional "org.springframework.data:spring-data-commons:$springDataCommonsVersion"
 		optional "org.springframework.data:spring-data-mongodb:$springDataMongodbVersion"
-		optional "org.springframework.data:spring-data-neo4j:$springDataNeo4jVersion"
+		optional ("org.springframework.data:spring-data-neo4j:$springDataNeo4jVersion") {
+			exclude group: "org.springframework", module: "spring-aspects"
+		}
 		optional "org.springframework.data:spring-data-gemfire:$springDataGemfireVersion"
 		compile("org.codehaus.woodstox:woodstox-core-asl:$woodstoxVersion") { dep ->
 			optional dep
 			exclude group: 'stax', module: 'stax-api'
 		}
 		optional "org.springframework.amqp:spring-amqp:$springAmqpVersion"
-		optional "org.springframework.amqp:spring-rabbit:$springAmqpVersion"
+		optional ("org.springframework.amqp:spring-rabbit:$springAmqpVersion") {
+			exclude group: "org.springframework", module: "spring-messaging"
+			exclude group: "org.springframework", module: "spring-web"
+		}
         optional "org.springframework.ldap:spring-ldap-core:$springLdapVersion"
         optional "org.springframework.ldap:spring-ldap-core-tiger:$springLdapVersion"
         optional "org.springframework.ldap:spring-ldap-ldif-core:$springLdapVersion"
@@ -378,7 +390,24 @@ project('spring-batch-infrastructure-neo4j4') {
 	merge.into = project(':spring-batch-infrastructure')
 
 	dependencies {
-		optional "org.springframework.data:spring-data-neo4j:$springDataNeo4j4Version"
+		optional ("org.springframework.data:spring-data-neo4j:$springDataNeo4j4Version") {
+			exclude group: 'org.springframework', module: 'spring-core'
+			exclude group: 'org.springframework', module: 'spring-aspects'
+			exclude group: 'org.springframework', module: 'spring-web'
+			exclude group: 'org.springframework', module: 'spring-context'
+			exclude group: 'org.springframework', module: 'spring-tx'
+			exclude group: 'org.springframework', module: 'spring-beans'
+			exclude group: 'org.springframework', module: 'spring-aop'
+			exclude group: 'org.springframework', module: 'spring-expression'
+		}
+		optional "org.springframework:spring-core:$springVersion"
+		optional "org.springframework:spring-context:$springVersion"
+		optional "org.springframework:spring-aspects:$springVersion"
+		optional "org.springframework:spring-web:$springVersion"
+		optional "org.springframework:spring-tx:$springVersion"
+		optional "org.springframework:spring-beans:$springVersion"
+		optional "org.springframework:spring-aop:$springVersion"
+		optional "org.springframework:spring-expression:$springVersion"
 		testCompile "org.mockito:mockito-core:$mockitoVersion"
 		testCompile "junit:junit:${junitVersion}"
 	}
@@ -544,7 +573,7 @@ project('spring-batch-integration') {
 		}
 		testCompile "org.springframework.integration:spring-integration-jdbc:$springIntegrationVersion"
 
-		optional "javax.jms:jms-api:1.1-rev-1"
+		optional "javax.jms:jms-api:$jmsVersion"
 		optional "org.slf4j:slf4j-log4j12:$slf4jVersion"
 		optional "log4j:log4j:$log4jVersion"
 		optional "org.springframework.integration:spring-integration-jms:$springIntegrationVersion"
@@ -578,7 +607,7 @@ project('spring-batch-samples') {
 			optional dep
 			exclude group: 'org.jboss.spec.javax.transaction', module: 'jboss-transaction-api_1.1_spec'
 		}
-		compile "javax.transaction:javax.transaction-api:1.2"
+		compile "javax.transaction:javax.transaction-api:$javaxTransactionVersion"
 		compile "org.apache.ibatis:ibatis-sqlmap:$ibatisVersion"
 		compile "org.springframework:spring-aop:$springVersion"
 		compile("org.springframework:spring-oxm:$springVersion") {
@@ -617,7 +646,10 @@ project('spring-batch-samples') {
 		optional "org.springframework:spring-web:$springVersion"
 		optional "org.springframework.data:spring-data-commons:$springDataCommonsVersion"
 		optional "org.springframework.amqp:spring-amqp:$springAmqpVersion"
-		optional "org.springframework.amqp:spring-rabbit:$springAmqpVersion"
+		optional ("org.springframework.amqp:spring-rabbit:$springAmqpVersion") {
+			exclude group: "org.springframework", module: "spring-messaging"
+			exclude group: "org.springframework", module: "spring-web"
+		}
         optional "javax.inject:javax.inject:1"
 
 		optional "javax.batch:javax.batch-api:$javaxBatchApiVersion"
@@ -630,19 +662,19 @@ reference {
 	sourceDir = file('src/site/docbook/reference')
 }
 
-apply plugin: 'sonar-runner'
-
-sonarRunner {
-	sonarProperties {
-		property "sonar.jacoco.reportPath", "${buildDir.name}/jacoco.exec"
-		property "sonar.links.homepage", linkHomepage
-		property "sonar.links.ci", linkCi
-		property "sonar.links.issue", linkIssue
-		property "sonar.links.scm", linkScmUrl
-		property "sonar.links.scm_dev", linkScmDevConnection
-		property "sonar.java.coveragePlugin", "jacoco"
-	}
-}
+//apply plugin: 'sonar-runner'
+//
+//sonarRunner {
+//	sonarProperties {
+//		property "sonar.jacoco.reportPath", "${buildDir.name}/jacoco.exec"
+//		property "sonar.links.homepage", linkHomepage
+//		property "sonar.links.ci", linkCi
+//		property "sonar.links.issue", linkIssue
+//		property "sonar.links.scm", linkScmUrl
+//		property "sonar.links.scm_dev", linkScmDevConnection
+//		property "sonar.java.coveragePlugin", "jacoco"
+//	}
+//}
 
 task api(type: Javadoc) {
 	group = 'Documentation'
@@ -802,7 +834,7 @@ task runTck(dependsOn: subprojects.compileJava) {
 	dependencies {
 		tck project(":spring-batch-core")
 
-		tck 'commons-pool:commons-pool:1.5.4'
+		tck "commons-pool:commons-pool:$commonsPoolVersion"
 		tck "javax.batch:javax.batch-api:$javaxBatchApiVersion"
 		tck "org.springframework:spring-core:$springVersion"
 		tck "org.springframework:spring-context:$springVersion"
@@ -840,5 +872,5 @@ or specify the Gradle property `TCK_HOME`, e.g: ./gradlew runTck -PTCK_HOME=/pat
 
 task wrapper(type: Wrapper) {
 	description = 'Generates gradlew[.bat] scripts'
-	gradleVersion = '2.14.1'
+	gradleVersion = '3.0'
 }
