--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,23 @@
-description = 'Spring Batch'
+//description = 'Spring Batch'
 
-apply plugin: 'base'
-apply plugin: 'idea'
+//apply plugin: 'base'
 
 buildscript {
 	repositories {
 		maven { url 'https://repo.spring.io/plugins-release' }
+		maven { url 'https://plugins.gradle.org/m2/' }
 	}
 	dependencies {
 		classpath 'io.spring.gradle:docbook-reference-plugin:0.3.1'
 		classpath 'org.springframework.build.gradle:propdeps-plugin:0.0.7'
 		classpath 'io.spring.gradle:spring-io-plugin:0.0.5.RELEASE'
 		classpath "io.spring.gradle:dependency-management-plugin:0.6.0.RELEASE"
+		classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:2.1"
 	}
+}
+
+plugins {
+	id 'org.sonarqube' version '2.1'
 }
 
 ext {
@@ -98,6 +103,8 @@ allprojects {
 		jrubyVersion = '1.7.26'
 		beanshellVersion = '2.0b5'
 	}
+
+	apply plugin: 'idea'
 }
 
 configure(subprojects - project(":spring-build-src")) { subproject ->
@@ -662,19 +669,20 @@ reference {
 	sourceDir = file('src/site/docbook/reference')
 }
 
-//apply plugin: 'sonar-runner'
-//
-//sonarRunner {
-//	sonarProperties {
-//		property "sonar.jacoco.reportPath", "${buildDir.name}/jacoco.exec"
-//		property "sonar.links.homepage", linkHomepage
-//		property "sonar.links.ci", linkCi
-//		property "sonar.links.issue", linkIssue
-//		property "sonar.links.scm", linkScmUrl
-//		property "sonar.links.scm_dev", linkScmDevConnection
-//		property "sonar.java.coveragePlugin", "jacoco"
-//	}
-//}
+apply plugin: 'org.sonarqube'
+
+sonarqube {
+	properties {
+		property "sonar.projectName", "Spring Batch"
+		property "sonar.jacoco.reportPath", "${buildDir.name}/jacoco.exec"
+		property "sonar.links.homepage", linkHomepage
+		property "sonar.links.ci", linkCi
+		property "sonar.links.issue", linkIssue
+		property "sonar.links.scm", linkScmUrl
+		property "sonar.links.scm_dev", linkScmDevConnection
+		property "sonar.java.coveragePlugin", "jacoco"
+	}
+}
 
 task api(type: Javadoc) {
 	group = 'Documentation'
