Fixing integration tests for CI build

--- a/spring-batch-core-tests/src/test/resources/batch-derby.properties
+++ b/spring-batch-core-tests/src/test/resources/batch-derby.properties
@@ -14,3 +14,4 @@ batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.De
 batch.database.incrementer.parent=columnIncrementerParent
 batch.grid.size=2
 batch.verify.cursor.position=false
+batch.jdbc.validationQuery=values 1
