--- a/spring-batch-core-tests/src/test/resources/batch-hsql.properties
+++ b/spring-batch-core-tests/src/test/resources/batch-hsql.properties
@@ -16,3 +16,4 @@ batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.Hs
 batch.database.incrementer.parent=columnIncrementerParent
 batch.grid.size=2
 batch.verify.cursor.position=true
+batch.jdbc.validationQuery=SELECT 1 FROM INFORMATION_SCHEMA.SYSTEM_USERS
