--- a/spring-batch-core-tests/src/test/resources/batch-mysql.properties
+++ b/spring-batch-core-tests/src/test/resources/batch-mysql.properties
@@ -11,3 +11,4 @@ batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.My
 batch.database.incrementer.parent=columnIncrementerParent
 batch.lob.handler.class=org.springframework.jdbc.support.lob.DefaultLobHandler
 batch.verify.cursor.position=true
+batch.jdbc.validationQuery=SELECT 1
