--- a/spring-batch-core-tests/src/test/resources/batch-postgres.properties
+++ b/spring-batch-core-tests/src/test/resources/batch-postgres.properties
@@ -14,3 +14,4 @@ batch.database.incrementer.class=org.springframework.jdbc.support.incrementer.Po
 batch.database.incrementer.parent=sequenceIncrementerParent
 batch.grid.size=2
 batch.verify.cursor.position=true
+batch.jdbc.validationQuery=SELECT 1
