--- a/build.gradle
+++ b/build.gradle
@@ -57,7 +57,7 @@ allprojects {
 		springDataMongodbVersion = '1.8.5.RELEASE'
 		springDataNeo4jVersion = '3.4.5.RELEASE'
 		springDataNeo4j4Version = '4.1.3.RELEASE' //?
-		springIntegrationVersion = '4.2.9.RELEASE'
+		springIntegrationVersion = '5.0.0.BUILD-SNAPSHOT'
 		springLdapVersion = '2.0.4.RELEASE'
 
 		activemqVersion = '5.13.2'
