--- a/build.gradle
+++ b/build.gradle
@@ -48,16 +48,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.0.0.BUILD-SNAPSHOT'
+		springVersionDefault = '5.0.0.M4'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.1.3.RELEASE'
 		springAmqpVersion = '1.5.6.RELEASE'
-		springDataCommonsVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.0.0.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.0.0.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.0.0.M1'
+		springDataGemfireVersion = '2.0.0.M1'
+		springDataJpaVersion = '2.0.0.M1'
+		springDataMongodbVersion = '2.0.0.M1'
+		springDataNeo4jVersion = '5.0.0.M1'
+		springIntegrationVersion = '5.0.0.M1'
 		springLdapVersion = '2.0.4.RELEASE'
 
 		activemqVersion = '5.13.2'
