--- a/build.gradle
+++ b/build.gradle
@@ -48,7 +48,7 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.0.0.M4'
+		springVersionDefault = '5.0.0.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.1.3.RELEASE'
 		springAmqpVersion = '1.5.6.RELEASE'
