--- a/build.gradle
+++ b/build.gradle
@@ -62,18 +62,18 @@ allprojects {
 
 		activemqVersion = '5.13.2'
 		aspectjVersion = '1.8.9'
-		castorVersion = '1.3.3'
+		castorVersion = '1.4.1'
 		commonsCollectionsVersion = '3.2.2'
 		commonsDdbcpVersion = '1.4'
 		commonsIoVersion = '2.4'
 		commonsLangVersion = '2.6'
 		commonsPoolVersion = '1.6'
 		derbyVersion = '10.12.1.1'
-		groovyVersion = '2.4.7'
+		groovyVersion = '2.4.11'
 		hamcrestVersion = '1.3'
 		h2databaseVersion = '1.4.192'
-		hibernateVersion = '5.2.2.Final'
-		hibernateValidatorVersion = '5.3.0.CR1'
+		hibernateVersion = '5.2.10.Final'
+		hibernateValidatorVersion = '5.4.1.Final'
 		hsqldbVersion = '2.3.3'
 		jackson2Version = "2.8.6" //?
 		javaMailVersion = '1.5.6'
@@ -89,9 +89,9 @@ allprojects {
 		mysqlVersion = '5.1.39'
 		mockitoVersion = '2.6.8'
 		postgresqlVersion = '9.4.1211.jre7'
-		quartzVersion = '2.2.3'
+		quartzVersion = '2.3.0'
 		servletApiVersion = '3.1.0'
-		slf4jVersion = '1.7.21'
+		slf4jVersion = '1.7.25'
 		sqlfireclientVersion = '1.0.3' //?
 		sqliteVersion = '3.8.11.2' //?
 		woodstoxVersion = '4.2.1'
