--- a/build.gradle
+++ b/build.gradle
@@ -37,10 +37,6 @@ allprojects {
 	repositories {
 		maven { url 'https://repo.spring.io/libs-milestone' }
 		maven { url 'https://repo.spring.io/plugins-release' }
-        maven { url "https://repo.spring.io/libs-snapshot" }
-
-		maven { url 'https://m2.neo4j.org/content/repositories/snapshots' }
-		maven { url 'https://m2.neo4j.org/content/repositories/releases'}
 		mavenCentral()
 	}
 
@@ -48,35 +44,35 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.0.0.BUILD-SNAPSHOT'
+		springVersionDefault = '5.0.0.RC1'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.0.RELEASE'
-		springAmqpVersion = '1.5.6.RELEASE'
-		springDataCommonsVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataGemfireVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataJpaVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataMongodbVersion = '2.0.0.BUILD-SNAPSHOT'
-		springDataNeo4jVersion = '5.0.0.BUILD-SNAPSHOT'
-		springIntegrationVersion = '5.0.0.BUILD-SNAPSHOT'
+		springAmqpVersion = '2.0.0.M4'
+		springDataCommonsVersion = '2.0.0.M3'
+		springDataGemfireVersion = '2.0.0.M3'
+		springDataJpaVersion = '2.0.0.M3'
+		springDataMongodbVersion = '2.0.0.M3'
+		springDataNeo4jVersion = '5.0.0.M3'
+		springIntegrationVersion = '5.0.0.M4'
 		springLdapVersion = '2.3.1.RELEASE'
 
-		activemqVersion = '5.13.2'
-		aspectjVersion = '1.8.9'
+		activemqVersion = '5.14.5'
+		aspectjVersion = '1.8.10'
 		castorVersion = '1.4.1'
 		commonsCollectionsVersion = '3.2.2'
 		commonsDdbcpVersion = '1.4'
 		commonsIoVersion = '2.4'
 		commonsLangVersion = '2.6'
 		commonsPoolVersion = '1.6'
-		derbyVersion = '10.12.1.1'
+		derbyVersion = '10.13.1.1'
 		groovyVersion = '2.4.11'
 		hamcrestVersion = '1.3'
-		h2databaseVersion = '1.4.192'
+		h2databaseVersion = '1.4.195'
 		hibernateVersion = '5.2.10.Final'
 		hibernateValidatorVersion = '5.4.1.Final'
-		hsqldbVersion = '2.3.3'
-		jackson2Version = "2.8.6" //?
-		javaMailVersion = '1.5.6'
+		hsqldbVersion = '2.4.0'
+		jackson2Version = "2.9.0.pr3"
+		javaMailVersion = '1.6.0-rc1'
 		javaxBatchApiVersion = '1.0'
 		javaxInjectVersion = '1'
 		javaxTransactionVersion = '1.2'
@@ -86,9 +82,9 @@ allprojects {
 		jtdsVersion = '1.3.1' //?
 		junitVersion = '4.12'
 		log4jVersion = '1.2.17'
-		mysqlVersion = '5.1.39'
-		mockitoVersion = '2.6.8'
-		postgresqlVersion = '9.4.1211.jre7'
+		mysqlVersion = '5.1.42'
+		mockitoVersion = '2.7.22'
+		postgresqlVersion = '42.1.1'
 		quartzVersion = '2.3.0'
 		servletApiVersion = '3.1.0'
 		slf4jVersion = '1.7.25'
@@ -487,7 +483,7 @@ project('spring-batch-test') {
 		compile project(":spring-batch-core")
 
 		compile "junit:junit:${junitVersion}"
-		compile "org.hamcrest:hamcrest-library:$hamcrestVersion" 
+		compile "org.hamcrest:hamcrest-library:$hamcrestVersion"
 		compile "org.springframework:spring-test:$springVersion"
 		compile "org.springframework:spring-jdbc:$springVersion"
 		compile "commons-io:commons-io:$commonsIoVersion"
