Moved batch docs into their own module.
Created index for pdf that includes all docs.
Cleared out all unnecessary files from docsZip

--- a/build.gradle
+++ b/build.gradle
@@ -722,6 +722,30 @@ task docsZip(type: Zip) {
 		}
 
 		from (asciidoctor) {
+			exclude '*.pdf'
+			exclude '*.html'
+			exclude 'images'
+			exclude 'html/index-pdf.html'
+			exclude 'pdf/images'
+			exclude 'pdf/appendix.pdf'
+			exclude 'pdf/common-patterns.pdf'
+			exclude 'pdf/domain.pdf'
+			exclude 'pdf/index.pdf'
+			exclude 'pdf/job.pdf'
+			exclude 'pdf/jsr-352.pdf'
+			exclude 'pdf/readersAndWriters.pdf'
+			exclude 'pdf/repeat.pdf'
+			exclude 'pdf/retry.pdf'
+			exclude 'pdf/scalability.pdf'
+			exclude 'pdf/schema-appendix.pdf'
+			exclude 'pdf/spring-batch-integration.pdf'
+			exclude 'pdf/spring-batch-intro.pdf'
+			exclude 'pdf/step.pdf'
+			exclude 'pdf/testing.pdf'
+			exclude 'pdf/transaction-appendix.pdf'
+			exclude 'pdf/whatsnew.pdf'
+			exclude 'pdf/glossary.pdf'
+
 			into 'reference'
 		}
 }
