Added a index-single for html.  This is to match previous doc releases from batch

--- a/build.gradle
+++ b/build.gradle
@@ -725,12 +725,13 @@ task docsZip(type: Zip) {
 			exclude '*.pdf'
 			exclude '*.html'
 			exclude 'images'
-			exclude 'html/index-pdf.html'
+			exclude  'html/index-pdf.html'
 			exclude 'pdf/images'
 			exclude 'pdf/appendix.pdf'
 			exclude 'pdf/common-patterns.pdf'
 			exclude 'pdf/domain.pdf'
 			exclude 'pdf/index.pdf'
+			exclude 'pdf/index-single.pdf'
 			exclude 'pdf/job.pdf'
 			exclude 'pdf/jsr-352.pdf'
 			exclude 'pdf/readersAndWriters.pdf'
