--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ allprojects {
 	group = 'org.springframework.batch'
 
 	repositories {
+		maven { url 'https://repo.spring.io/libs-snapshot' }
 		maven { url 'https://repo.spring.io/libs-milestone' }
 		maven { url 'https://repo.spring.io/plugins-release' }
 		mavenCentral()
@@ -45,16 +46,16 @@ allprojects {
 
 		environmentProperty = project.hasProperty('environment') ? getProperty('environment') : 'hsql'
 
-		springVersionDefault = '5.0.0.RC1'
+		springVersionDefault = '5.0.0.BUILD-SNAPSHOT'
 		springVersion = project.hasProperty('springVersion') ? getProperty('springVersion') : springVersionDefault
 		springRetryVersion = '1.2.0.RELEASE'
-		springAmqpVersion = '2.0.0.M4'
-		springDataCommonsVersion = '2.0.0.M3'
-		springDataGemfireVersion = '2.0.0.M3'
-		springDataJpaVersion = '2.0.0.M3'
-		springDataMongodbVersion = '2.0.0.M3'
-		springDataNeo4jVersion = '5.0.0.M3'
-		springIntegrationVersion = '5.0.0.M4'
+		springAmqpVersion = '2.0.0.BUILD-SNAPSHOT'
+		springDataCommonsVersion = '2.0.0.BUILD-SNAPSHOT'
+		springDataGemfireVersion = '2.0.0.BUILD-SNAPSHOT'
+		springDataJpaVersion = '2.0.0.BUILD-SNAPSHOT'
+		springDataMongodbVersion = '2.0.0.BUILD-SNAPSHOT'
+		springDataNeo4jVersion = '5.0.0.BUILD-SNAPSHOT'
+		springIntegrationVersion = '5.0.0.BUILD-SNAPSHOT'
 		springLdapVersion = '2.3.1.RELEASE'
 
 		activemqVersion = '5.14.5'
