--- a/build.gradle
+++ b/build.gradle
@@ -673,10 +673,10 @@ sonarqube {
 task api(type: Javadoc) {
 	group = 'Documentation'
 	description = 'Generates aggregated Javadoc API documentation.'
-	title = "${rootProject.description} ${version} API"
+	title = "Spring Batch ${version} API"
 	options.memberLevel = org.gradle.external.javadoc.JavadocMemberLevel.PROTECTED
 	options.author = true
-	options.header = rootProject.description
+	options.header = 'Spring Batch'
 	options.overview = 'src/api/overview.html'
     if (JavaVersion.current().isJava8Compatible()) {
         options.addStringOption('Xdoclint:none', '-quiet')
