Updated Hibernate Validator Coordinates
With the more recent versions of Hibernate Validator, the groupId was
changed from org.hibernate to org.hibernate.validator.  This commit
updates Spring Batch to use the correct coordinates.

Resolves BATCH-2648

--- a/build.gradle
+++ b/build.gradle
@@ -337,7 +337,7 @@ project('spring-batch-infrastructure') {
 			optional dep
 			exclude group: 'org.jboss.spec.javax.transaction', module: 'jboss-transaction-api_1.1_spec'
 		}
-		optional "org.hibernate:hibernate-validator:$hibernateValidatorVersion"
+		optional "org.hibernate.validator:hibernate-validator:$hibernateValidatorVersion"
 		optional "javax.transaction:javax.transaction-api:$javaxTransactionVersion"
 		optional "javax.mail:javax.mail-api:$javaMailVersion"
 		optional "javax.batch:javax.batch-api:$javaxBatchApiVersion"
