New toggle implementation
I made a new implementation of the XML/Java toggle (and added a third choice for having both available).

Changes to make a dynamic ToC work with content selection toggles

Various asciidoc and JavaScript changes to make the dynamic ToC (tocbot) work with the content toggle (XML or Java in this case but also more options in other projects).

--- a/build.gradle
+++ b/build.gradle
@@ -629,6 +629,7 @@ asciidoctor {
 		from(sourceDir) {
 			include 'images/**'
 			include 'jsfiles/**'
+			include 'tocbot-3.0.2/**'
 		}
 	}
 	logDocuments = true
@@ -637,7 +638,7 @@ asciidoctor {
 	attributes  'icons': 'font',
 			'idprefix': '',
 			'idseparator': '-',
-			docinfo: '',
+			docinfo: 'shared',
 			revnumber: project.version,
 			sectanchors: '',
 			sectnums: '',
